back from branch

--- a/invoice/home/templates/invoice.html
+++ b/invoice/home/templates/invoice.html
@@ -189,7 +189,7 @@ table {
 <body>
     <div class="main-container">
         <div class="logo">
-            <span><img src="D:\invoice\invoice\home\static\images\logo.png" alt="reignsys softtech"></span>
+            <span><img src="/home/reignsys/mysite/reignsysbill/invoice/home/static/images/logo.png" alt="reignsys softtech"></span>
         </div>
         <div class="row-1">
             <hr>
@@ -210,7 +210,7 @@ table {
                     <td>
                         <p class="margin-top-1rem" style="padding-top: 2px;">Bill-To / Sold-To Customer</p>
                         <p class="height-80px font-bold">{{customer_details}}</p>
-                        <p class="height-80px">{{customer_address}},GSTIN : {{customer_gst}},PAN : {{customer_pan}} </p>
+                        <p class="height-80px">{{customer_address}}<br>GSTIN : {{customer_gst}}<br>PAN : {{customer_pan}} </p>
                         <!-- <p>GSTIN : {{customer_gst}}</p>
                         <p>PAN : {{customer_pan}}</p> -->
 
@@ -305,7 +305,7 @@ table {
         </div>
         <div class="signatue">
             <div class="signature-img">
-                <img src="D:\invoice\invoice\home\static\images\signature.png" alt="signature">
+                <img src="/home/reignsys/mysite/reignsysbill/invoice/home/static/images/signature.png" alt="signature">
             </div>
             <p style="padding-right: 150px;">Authorized Signatory </p>
         </div>
