--- a/invoice/home/templates/login.html
+++ b/invoice/home/templates/login.html
@@ -12,10 +12,10 @@
       padding: 0;
       margin: 0;
       font-family: Roboto, Arial, sans-serif;
-      font-size: 14px; 
+      font-size: 14px;
       color: #666;
       }
-      input, textarea { 
+      input, textarea {
       outline: none;
       }
       body {
@@ -110,7 +110,7 @@
       border-radius: 20px;
       border: none;
       border-bottom: 4px solid #3e4f24;
-      background: #5a7233; 
+      background: #5a7233;
       font-size: 16px;
       font-weight: 400;
       color: #fff;
@@ -125,9 +125,9 @@
       }
     </style>
   </head>
-  
+
   <body>
-    
+
     <form method="POST" class="decor">
         {% csrf_token %}
         <!-- <h3 style="text-align: center;">Login page</h3> -->
@@ -136,7 +136,7 @@
       <div class="circle"></div>
       <div class="form-inner">
         <input type="text" placeholder="Username" name="username" required>
-        <input type="password" placeholder="Customer GST Number" name= "password" required>
+        <input type="password" placeholder="Password" name= "password" required>
         <button type="submit">Login</button>
         {{error}}
       </div>
